# rust-wasm-typescript-starter

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT_STATUS.md  DEVELOPMENT.md  GITHUB_SETUP.md  LICENSE  README.md  TROUBLESHOOTING.md  build-for-pages.sh  build-wasm.sh  debug-pages.sh  deploy-to-github.sh  index.html  package-lock.json  package.json  preview-pages.sh  setup-github-remote.sh  vite.config.dev.ts  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml
assets/: index-DE0GnK8x.js  index-DQLu7Wab.js  index-DW5zC_do.css  index-DchlkYg_.js  index-Dknwgqee.css  index-VEOCpqL3.css  rust_wasm_bg-B-6Ttd33.wasm  rust_wasm_bg-CQBK0tn-.wasm
rust-wasm/: Cargo.toml  Cargo.toml.bak  Cargo_new.toml  rustfmt.toml
rust-wasm/src/: lib.rs
src/: main.ts  style.css
